2007-09-23  Steffen Macke <sdteffen@sdteffen.de>

	* AUTHORS: Added Maher, updated email address
	* doc/en/dcprocessing.xml: Updated documentation: 1.3.0 release notes,
	"Segmentize Polylines" documentation
	
2007-09-18  Maher Abdel Karim <Maher_karim@dorsch.com.jo>
	
	* DCProcess.segmentizePllTheme:consider selection
	on processing.closing feature request #1793905.
	* dcprocessing.nsi: update version number 1.3.0
	
2007-03-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* script/pe_fitting_boq.sql:
	* script/create_pe_dcboq_ddl.sql: Scripts for PE-only installations
	(up to DN500). Thanks to Walid
	
2006-07-22  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml:
	* dcprocessing.xml:
	* dcprocessextension.make.ave: The version number is 1.2.9 now
	* doc/en/dcprocessing.xml:
	* dcprocess.createpntthemefromgrid.ave: Fixed critical bug #1526864
	
2006-05-07  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.extendpolylines.ave: Only work on selected lines

2006-05-04  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.extendpolylines.ave:
	* dcprocess.extendpolylines.update.ave:
	* dcprocess.network.classifyconnections.update.ave: improved robustness
	of update scripts, cancel handling; fixed bug #1481601
	* dcprocessextension.make.ave: version number is 1.2.8+cvs now

2006-05-01  Steffen Macke <sdteffen@gmail.com>

	* dcprocessextension.make.ave:
	* build.xml:
	* dcprocessing.nsi: Updated for 1.2.8 release
	* doc/en/dcprocessing.xml: Updated for 1.2.8 release; Added index;
	switch from DocBook article to book
	* dcprocess.extendpolylines.ave:
	* dcprocess.extendpolylines.update.ave: New function to scale polylines
	
2006-04-09  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.network.classifyconnections.ave:
	* dcprocess.network.returndetail3.ave:
	* dcprocess.network.returndetail11.ave: Added new connection types
	35,115
	
2006-04-08  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcprocess.network.classifyconnections.ave: