@@ -12,7 +12,7 @@
     </copyright>
     <copyright>
       <year>2007</year>
-      <holder>Steffen Macke</holder>
+      <holder>Steffen Macke,DORSCH Consult Water and Environment</holder>
     </copyright>
     <author>
       <personname>
@@ -20,6 +20,13 @@
 	<surname>Macke</surname>
       </personname>
       <email>sdteffen@sdteffen.de</email>
+    </author>
+     <author>
+      <personname>
+	<firstname>Maher</firstname>
+	<surname>Abdel Karim</surname>
+      </personname>
+      <email>Maher_Karim@dorsch.com.jo</email>
     </author>
     <pubdate>$Date$</pubdate>
     <legalnotice>
@@ -54,8 +61,8 @@
     <indexterm><primary>news</primary></indexterm>
     <para>A summary of changes in the different versions of the DC Processing
       Extension.</para>
-    <sect3 id="version_1_2_10">
-      <title>Version 1.2.10</title>
+    <sect3 id="version_1_3_0">
+      <title>Version 1.3.0</title>
       <itemizedlist>
         <listitem><para>&quot;Segmentize Polylines&quot; will now work on the selection,
         if there is a selection.</para></listitem>
