@@ -1,3 +1,8 @@
+2007-09-24  Maher Abdel Karim <Maher_karim@dorsch.com.jo>
+
+	* doc/en/dcprocessing.xml: Updated documentation:update version number,
+	in news section, updated copyrights.
+	
 2007-09-23  Steffen Macke <sdteffen@sdteffen.de>
 
 	* AUTHORS: Added Maher, updated email address
